name:          backend
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          backend
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    other-modules:   DataAccess, Domain
    build-depends:  base   >= 4      && < 5
                  , scotty >= 0.10.0 && < 0.11
                  , wai-middleware-static >= 0.8 && < 0.9
                  , wai
                  , http-types
                  , wai-extra
                  , text
                  , postgresql-simple
                  , resource-pool
                  , bytestring
                  , transformers
                  , monad-logger
                  , configurator
